fix issues with lint errors
